fixed the email element alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,7 +56,7 @@ body {
 
 .email {
   margin-bottom: 1.8em;
-  margin-left: 4em;
+  margin-left: 3.4em;
 }
 
 .pswd_1 {
